# connect-four-ai

./: .gitignore  Cargo.toml  README.md
src/: main.rs  neuralnet.rs
