[package]
name = "connect_four_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
cursive = "0.20.0"
libm = "0.2.6"
ncurses = "5.101.0"
rand = "0.8.5"

